--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
     "server": "nodemon server.js "
   },
   "keywords": [],
@@ -23,6 +24,7 @@
     "mongoose": "^7.3.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
+    "path": "^0.12.7",
     "slugify": "^1.6.6"
   }
 }
